apps/base/adservice/adservice-ingress-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: adservice-ingress
  labels: 
    app: adservice

spec:
  podSelector:
    matchLabels:
      app: adservice

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 9555
